@@ -3,13 +3,13 @@
 provisioner --scale 25
 provisioner --restart
 
-coordinator     --workerVmOptions "-ea -server -Xms2G -Xmx2G -XX:+PrintGC -XX:+HeapDumpOnOutOfMemoryError" \
+coordinator     --workerVmOptions "-XX:+HeapDumpOnOutOfMemoryError" \
                 --clientHzFile      ../conf/client-hazelcast.xml \
                 --hzFile            ../conf/hazelcast.xml \
                 --clientWorkerCount 100 \
                 --memberWorkerCount 25 \
                 --workerClassPath   '../target/*.jar' \
-                --duration          10m \
+                --duration          20m \
                 ../conf/test.properties
 
 provisioner --download
